# hubload

./: main.py  pyproject.toml  requirements.txt
downloads/: Akon feat. Ethel the Cat - Right Now (Oo ii aa) (Full Version).m4a  Jota.Pê - Quem é Juão  Sofar São Paulo.m4a  ♪ Deadpool (Finge que é Jujutsu)  Ado ado ado  AniRap.m4a
static/: styles.css
templates/: index.html  styles.css
