[tool.poetry]
name = "azeitonapreta"
version = "0.1.0"
description = ""
authors = ["MoonyJV <joaovictorvasconcelos27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytubefix = "^8.12.1"
flask = "^3.1.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
